[package]
name = "github-oauth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-session = "0.8.0"
actix-web = "4.4.0"
async-std = "1.12.0"
reqwest = "0.11.22"
serde = "1.0.189"
serde_json = "1.0.107"
tokio = {version = "1.33.0", features = ["full"]}
